# hyperliquid-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  account_utils.py  bot.py  check_balance.py  circuit_breaker.py  coin_utils.py  config.py  deploy-docker.md  docker-compose.yml  exceptions.py  json_config_loader.py  log_config.py  market_data.py  order_manager.py  order_rejection_tracker.py  position_closer.py  pyproject.toml  rate_limiter.py  requirements.txt  risk_manager.py  test_market_data.py  ttl_cache.py
.github/: dependabot.yml  pull_request_template.md
docs/: docker-release.md
examples/: config.example.json
hip3/: __init__.py  dex_registry.py  multi_dex_market_data.py  multi_dex_order_manager.py
strategies/: __init__.py  base_strategy.py  bollinger_bands_strategy.py  breakout_strategy.py  coin_health_tracker.py  grid_trading_strategy.py  macd_strategy.py  market_making_strategy.py  mm_config.py  mm_order_tracker.py  mm_position_closer.py  rsi_strategy.py  simple_ma_strategy.py
tests/: test_account_utils.py  test_active_orders_race.py  test_adverse_auto_exclude.py  test_adverse_selection_tracker.py  test_backoff_reset_on_data_error.py  test_base_strategy_helpers.py  test_base_strategy_run.py  test_bbo_guard.py  test_bbo_price_validation.py  test_bot_config_layering.py  test_bot_position_management.py  test_builder_fee.py  test_bulk_cancel.py  test_bulk_orders.py  test_circuit_breaker.py  test_close_order_optimization.py  test_close_position_guard.py  test_coin_utils.py  (+60 more)
(+25 files in other folders)
